# Code_review_Agent

./: .env.example  .gitignore  CODE_REVIEW_AGENT_PLAN.md  README.md  agent.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
examples/: demo-input.md  demo-report.md
frontend/: index.html
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts  utils.ts
frontend/src/components/: ChatPanel.tsx  EmptyState.tsx  FindingsPanel.tsx  InlineStatus.tsx  ReportPanel.tsx  ReviewForm.tsx  StatusStrip.tsx
frontend/src/test/: setup.ts
src/review_agent/: __init__.py  config.py  demo.py  errors.py  observability.py
src/review_agent/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
src/review_agent/graph/: context_fetcher.py  nodes.py  state.py  workflow.py
src/review_agent/memory/: conversation.py  router.py
src/review_agent/models/: __init__.py  context.py  diff.py  finding.py  pr.py  report.py  session.py
src/review_agent/reviewers/: __init__.py  cross_file_policy.py  cross_file_reviewer.py  finding_parser.py  finding_ranker.py  hunk_reviewer.py  llm_reviewer.py  outcome.py  prompts.py
src/review_agent/services/: command_runner.py  repo_cache.py  review_context.py  review_service.py  (+2 more)
tests/: test_error_observability.py  test_optimization_plan.py  test_phase1_models.py  test_phase2_diff_and_github.py  test_phase3_python_context.py  test_phase4_workflow.py  test_phase5_reviewers.py  test_phase6_verification_ranker.py  test_phase7_report_cli.py  test_phase8_api_store.py  test_phase9_memory.py
(+10 files in other folders)
