[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-agent"
version = "0.1.0"
description = "Python-first GitHub PR code review agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "gitpython>=3.1",
    "httpx>=0.28",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "openai>=1.55",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "unidiff>=0.7",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
